--- a/todo.html
+++ b/todo.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="newtask">
-            <input type="text" placeholder="Add Tasks">
+            <input type="text" placeholder="Add Tasks" onkeyup="s()" id="abc">
             <button id="push">Add</button>
         </div>
         <div id="tasks"></div>
